[gd_scene load_steps=13 format=3 uid="uid://ioymqnehhh2i"]

[ext_resource type="Script" uid="uid://67ftxiqru1ir" path="res://scenes/pause_menu.gd" id="1_kukqi"]
[ext_resource type="Shader" uid="uid://cat2ottxy70lo" path="res://scenes/blur_background.gdshader" id="1_myx47"]
[ext_resource type="Theme" uid="uid://b6jk6oy0yh58i" path="res://scenes/complex_textured_button_theme.tres" id="3_7l7mv"]
[ext_resource type="PackedScene" uid="uid://bgu8pl8t1t1ry" path="res://scenes/options_menu.tscn" id="3_kukqi"]
[ext_resource type="Texture2D" uid="uid://cs6hoy5cgn6wv" path="res://assets/ui/uipackSpace_sheet.png" id="4_v4r4p"]
[ext_resource type="AudioStream" uid="uid://bmku3dj1s8f5o" path="res://assets/sfx/ui-select.ogg" id="6_88e76"]
[ext_resource type="AudioStream" uid="uid://bvbm57nl02wsq" path="res://assets/sfx/ui-open.ogg" id="7_knqa7"]
[ext_resource type="AudioStream" uid="uid://ddfkift2ohcmj" path="res://assets/sfx/ui-hide.ogg" id="8_71k7c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_myx47"]
shader = ExtResource("1_myx47")
shader_parameter/blur = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7l7mv"]
atlas = ExtResource("4_v4r4p")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s2dm"]
atlas = ExtResource("4_v4r4p")
region = Rect2(300, 212, 80, 80)

[sub_resource type="LabelSettings" id="LabelSettings_88e76"]
font_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_kukqi")

[node name="BackgroundBlur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_myx47")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -400.0
offset_right = 640.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBackgroundRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -105.0
offset_right = 105.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_7l7mv")
patch_margin_left = 11
patch_margin_top = 31
patch_margin_right = 11
patch_margin_bottom = 11

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -85.0
offset_right = 85.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("3_7l7mv")

[node name="ButtonTexture" type="NinePatchRect" parent="VBoxContainer/ResumeButton"]
show_behind_parent = true
custom_minimum_size = Vector2(170, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1s2dm")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ResumeButtonLabel" type="Label" parent="VBoxContainer/ResumeButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
label_settings = SubResource("LabelSettings_88e76")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_7l7mv")

[node name="ButtonTexture" type="NinePatchRect" parent="VBoxContainer/OptionsButton"]
show_behind_parent = true
custom_minimum_size = Vector2(170, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1s2dm")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="OptionsButtonLabel" type="Label" parent="VBoxContainer/OptionsButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
label_settings = SubResource("LabelSettings_88e76")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitTitleScreen" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_7l7mv")

[node name="ButtonTexture" type="NinePatchRect" parent="VBoxContainer/QuitTitleScreen"]
show_behind_parent = true
custom_minimum_size = Vector2(170, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -16.0
offset_right = 85.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1s2dm")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="QuitTitleButtonLabel" type="Label" parent="VBoxContainer/QuitTitleScreen"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit to Title Screen"
label_settings = SubResource("LabelSettings_88e76")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("3_7l7mv")

[node name="ButtonTexture" type="NinePatchRect" parent="VBoxContainer/QuitGame"]
show_behind_parent = true
custom_minimum_size = Vector2(170, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1s2dm")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="QuitGameButtonLabel" type="Label" parent="VBoxContainer/QuitGame"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit Game"
label_settings = SubResource("LabelSettings_88e76")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenuLayer" parent="." instance=ExtResource("3_kukqi")]
visible = false

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_88e76")
bus = &"2_SFX"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_knqa7")
bus = &"2_SFX"

[node name="CloseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_71k7c")
bus = &"2_SFX"

[connection signal="mouse_entered" from="VBoxContainer/ResumeButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionsButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitTitleScreen" to="." method="_on_button_hover"]
[connection signal="pressed" from="VBoxContainer/QuitTitleScreen" to="." method="_on_quit_title_screen_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitGame" to="." method="_on_button_hover"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
